--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -9,6 +9,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+    <nav>
+    <a href="relatorios.html" class="btn-nav"><i class="fas fa-chart-pie"></i> Ver Relatórios Avançados</a>
+     <a href="mentores.html" class="btn-nav"><i class="fas fa-users"></i> Encontrar Mentores</a>
+</nav>
   </head>
   <body>
     <header>
@@ -96,47 +100,8 @@
       </section>
       <hr />
 
-      <section id="gestao-kpis">
-        <h2>Registar Desempenho Mensal (KPIs)</h2>
-        <form id="form-kpi">
-          <div class="input-group">
-            <select id="kpi-id-startup" required>
-              <option value="">Selecione a Startup...</option>
-            </select>
-
-            <input
-              type="date"
-              id="kpi-mes"
-              title="Mês de Referência"
-              required
-            />
-            <input
-              type="number"
-              id="kpi-faturamento"
-              placeholder="Faturamento Mensal"
-              step="0.01"
-              required
-            />
-            <input
-              type="number"
-              id="kpi-usuarios"
-              placeholder="Usuários Ativos"
-              required
-            />
-            <input
-              type="number"
-              id="kpi-churn"
-              placeholder="Churn Rate (%)"
-              step="0.1"
-              required
-            />
-          </div>
-          <button type="submit">Registar KPI</button>
-        </form>
-      </section>
-    </main>
-
+      
     <script src="startups.js"></script>
-    <script src="kpis.js"></script>
+    
   </body>
 </html>
